# Gomoku

./: .gitignore  AI_conf.json  CMakeLists.txt  generateReport.sh  generateTest.sh  values.json
include/AI/: MonteCarlo.hh  NodeCache.hh  TreeNode.hh
include/Core/: BoardEvaluator.hh  BoardOperator.hh  BoardSeeker.hh  Core.hh  Definitions.hh  Definitions.hpp  IBoardOperator.hh  IReferee.hh  Pattern.hh  PatternManager.hh  Referee.hh  Referee.hpp  Rule.hh
include/Gui/: Button.hpp  CoreOberser.hh  GUImas.hh  Graph.hpp  GraphicException.hpp  IButton.hpp  ICoreOberser.hh  IGUI.hh  ILayer.hh  IMenu.hpp  IPlayerObserver.hh  IUIHandle.hh  Layer.hh  Menu.hpp  MenuGame.hh  Obs.hpp  PlayerObserver.hh
include/Helpers/: History.hh  Stopwatch.hh  fastList.hpp  reservationList.hpp  rotatingArray.hpp  rotatingVector.hpp
include/Players/: AI.hh  Ai.hh  Human.hh  IAI.hh  IAi.hh  IHuman.hh  IPlayer.hh
intepretor/res/: js.js
ressource/: .checked.png-autosave.kra
src/: main.cpp
src/AI/: MonteCarlo.cpp  NodeCache.cpp  TreeNode.cpp
src/Core/: BoardEvaluator.cpp  BoardOperator.cpp  BoardSeeker.cpp  Core.cpp  Pattern.cpp  PatternManager.cpp  Referee.cpp  Rule.cpp
src/Gui/: CoreObserver.cpp  GUImas.cpp  Graph.cpp  GraphicException.cpp  Layer.cpp  Menu.cpp  MenuGame.cpp  Obs.cpp  PlayerObserver.cpp
src/Players/: AI.cpp  Ai.cpp  Human.cpp
src/helpers/: History.cpp  Stopwatch.cpp  list.hh  list_add.c  list_basic.c  list_gestion.c  list_supr.c  main.cpp
testIntepretor/: js.js
testIntepretor/include/: FileParser.hh  HTMLWriter.hh
testIntepretor/res/: js.js
testIntepretor/src/: FileParser.cpp  HTMLWriter.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp
tests/conf/: BasicBreakingFive  BreakableFiveFailure  Breakable_five_Success  Breakable_five_disable  Breakable_five_enable  ICantPlayHere  ICantPlayHere_2  ICantPlayHere_3  UnExcepted_Victory_WTF  autophagie  bad_play  basic_test_1  basic_test_2  basic_test_3  breakable_five_fail  camarchepas  camarchepas2  double_three_diag_1  double_three_fail  execpt_take  fake_white_victory  letestlongcmb  random  simple_three  unknow_bug  unknow_bug_2  victory_exepted  white_victory  white_victory_2  white_victory_by_line
tests/include/: ConfParser.hh  testGUI.hh
tests/src/: ConfParser.cpp  main.cpp  testGUI.cpp
